==> ExMikuPro/STM32F401RCT6_ST7789V/Core/Src/ST7789/st7789.c <==
#include "st7789.h"
#include <string.h>
#define HOR_LEN    5    //	Also mind the resolution of your screen!

static void ST7789_WriteCommand(uint8_t cmd) {
    ST7789_Select();
    ST7789_DC_Clr();
    HAL_SPI_Transmit(&ST7789_SPI_PORT, &cmd, sizeof(cmd), HAL_MAX_DELAY);
    ST7789_UnSelect();
}

static void ST7789_WriteData(uint8_t *buff, size_t buff_size) {
    ST7789_Select();
    ST7789_DC_Set();

    // split data in small chunks because HAL can't send more than 64K at once

    while (buff_size > 0) {
        uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
#ifdef USE_DMA
        if (DMA_MIN_SIZE <= buff_size) {
            HAL_SPI_Transmit_DMA(&ST7789_SPI_PORT, buff, chunk_size);
            while (ST7789_SPI_PORT.hdmatx->State != HAL_DMA_STATE_READY) {}
        } else
            HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#else
        HAL_SPI_Transmit(&ST7789_SPI_PORT, buff, chunk_size, HAL_MAX_DELAY);
#endif
        buff += chunk_size;
        buff_size -= chunk_size;
    }

    ST7789_UnSelect();
}

static void ST7789_WriteSmallData(uint8_t data) {
    ST7789_Select();
    ST7789_DC_Set();
    HAL_SPI_Transmit(&ST7789_SPI_PORT, &data, sizeof(data), HAL_MAX_DELAY);
    ST7789_UnSelect();
}

static void ST7789_SetAddressWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1) {
    ST7789_Select();
    uint16_t x_start = x0 + X_SHIFT, x_end = x1 + X_SHIFT;
    uint16_t y_start = y0 + Y_SHIFT, y_end = y1 + Y_SHIFT;

    /* Column Address set */
    ST7789_WriteCommand(ST7789_CASET);
    {
        uint8_t data[] = {x_start >> 8, x_start & 0xFF, x_end >> 8, x_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }

    /* Row Address set */
    ST7789_WriteCommand(ST7789_RASET);
    {
        uint8_t data[] = {y_start >> 8, y_start & 0xFF, y_end >> 8, y_end & 0xFF};
        ST7789_WriteData(data, sizeof(data));
    }
    /* Write to RAM */
    ST7789_WriteCommand(ST7789_RAMWR);
    ST7789_UnSelect();
}

void ST7789_Init(void) {
#ifdef USE_DMA
    memset(disp_buf, 0, sizeof(disp_buf));
#endif
    HAL_Delay(10);
    ST7789_RST_Clr();
    HAL_Delay(10);
    ST7789_RST_Set();
    HAL_Delay(20);

//    ST7789_WriteCommand(ST7789_COLMOD);		//	Set color mode
//    ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);

    ST7789_WriteCommand(0x36);
    ST7789_WriteSmallData(0x00);
    ST7789_WriteCommand(0x3a);
    ST7789_WriteSmallData(0x05);

    ST7789_WriteCommand(0xB2);                //	Porch control
    {
        uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_SetRotation(ST7789_ROTATION);    //	MADCTL (Display Rotation)

    /* Internal LCD Voltage generator settings */
    ST7789_WriteCommand(0XB7);                //	Gate Control
    ST7789_WriteSmallData(0x35);            //	Default value
    ST7789_WriteCommand(0xBB);                //	VCOM setting
    ST7789_WriteSmallData(0x19);            //	0.725v (default 0.75v for 0x20)
    ST7789_WriteCommand(0xC0);                //	LCMCTRL
    ST7789_WriteSmallData(0x2C);            //	Default value
    ST7789_WriteCommand(0xC2);                //	VDV and VRH command Enable
    ST7789_WriteSmallData(0x01);            //	Default value
    ST7789_WriteCommand(0xC3);                //	VRH set
    ST7789_WriteSmallData(0x12);            //	+-4.45v (defalut +-4.1v for 0x0B)
    ST7789_WriteCommand(0xC4);                //	VDV set
    ST7789_WriteSmallData(0x20);            //	Default value
    ST7789_WriteCommand(0xC6);                //	Frame rate control in normal mode
    ST7789_WriteSmallData(0x0F);            //	Default value (60HZ)
    ST7789_WriteCommand(0xD0);                //	Power control
    ST7789_WriteSmallData(0xA4);            //	Default value
    ST7789_WriteSmallData(0xA1);            //	Default value
    /**************** Division line ****************/

    ST7789_WriteCommand(0xE0);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }

    ST7789_WriteCommand(0xE1);
    {
        uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
        ST7789_WriteData(data, sizeof(data));
    }
    ST7789_WriteCommand(ST7789_INVON);        //	Inversion ON
    ST7789_WriteCommand(ST7789_SLPOUT);    //	Out of sleep mode
    ST7789_WriteCommand(ST7789_NORON);        //	Normal Display on
    ST7789_WriteCommand(ST7789_DISPON);    //	Main screen turned on

    HAL_Delay(50);
    ST7789_Fill_Color(BLACK);                //	Fill with Black.
}

void ST7789_Fill_Color(uint16_t color) {
    uint16_t i;
    ST7789_SetAddressWindow(0, 0, ST7789_WIDTH - 1, ST7789_HEIGHT - 1);
    ST7789_Select();

#ifdef USE_DMA
    for (i = 0; i < ST7789_HEIGHT / HOR_LEN; i++) {
        memset(disp_buf, color, sizeof(disp_buf));
        ST7789_WriteData(disp_buf, sizeof(disp_buf));
    }
#else
    uint16_t j;
    for (i = 0; i < ST7789_WIDTH; i++)
            for (j = 0; j < ST7789_HEIGHT; j++) {
                uint8_t data[] = {color >> 8, color & 0xFF};
                ST7789_WriteData(data, sizeof(data));
            }
#endif
    ST7789_UnSelect();
}

void ST7789_DrawPixel(uint16_t x, uint16_t y, uint16_t color) {
    if ((x < 0) || (x >= ST7789_WIDTH) ||
        (y < 0) || (y >= ST7789_HEIGHT))
        return;

    ST7789_SetAddressWindow(x, y, x, y);
    uint8_t data[] = {color >> 8, color & 0xFF};
    ST7789_Select();
    ST7789_WriteData(data, sizeof(data));
    ST7789_UnSelect();
}

void ST7789_Fill(uint16_t xSta, uint16_t ySta, uint16_t xEnd, uint16_t yEnd, uint16_t color) {
    if ((xEnd < 0) || (xEnd >= ST7789_WIDTH) ||
        (yEnd < 0) || (yEnd >= ST7789_HEIGHT))
        return;
    ST7789_Select();
    uint16_t i, j;
    ST7789_SetAddressWindow(xSta, ySta, xEnd, yEnd);
    for (i = ySta; i <= yEnd; i++)
        for (j = xSta; j <= xEnd; j++) {
            uint8_t data[] = {color >> 8, color & 0xFF};
            ST7789_WriteData(data, sizeof(data));
        }
    ST7789_UnSelect();
}

void ST7789_DrawPixel_4px(uint16_t x, uint16_t y, uint16_t color) {
    if ((x <= 0) || (x > ST7789_WIDTH) ||
        (y <= 0) || (y > ST7789_HEIGHT))
        return;
    ST7789_Select();
    ST7789_Fill(x - 1, y - 1, x + 1, y + 1, color);
    ST7789_UnSelect();
}

void ST7789_DrawImage(uint16_t x, uint16_t y, uint16_t w, uint16_t h, const uint16_t *data) {
    if ((x >= ST7789_WIDTH) || (y >= ST7789_HEIGHT))
        return;
    if ((x + w - 1) >= ST7789_WIDTH)
        return;
    if ((y + h - 1) >= ST7789_HEIGHT)
        return;

    ST7789_Select();
    ST7789_SetAddressWindow(x, y, x + w - 1, y + h - 1);
    ST7789_WriteData((uint8_t *) data, sizeof(uint16_t) * w * h);
    ST7789_UnSelect();
}

void ST7789_WriteString(uint16_t x, uint16_t y, const char *str, FontDef font, uint16_t color, uint16_t bgcolor) {
    ST7789_Select();
    while (*str) {
        if (x + font.width >= ST7789_WIDTH) {
            x = 0;
            y += font.height;
            if (y + font.height >= ST7789_HEIGHT) {
                break;
            }

            if (*str == ' ') {
                // skip spaces in the beginning of the new line
                str++;
                continue;
            }
        }
        ST7789_WriteChar(x, y, *str, font, color, bgcolor);
        x += font.width;
        str++;
    }
    ST7789_UnSelect();
}

void ST7789_DrawFilledRectangle(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color) {
    ST7789_Select();
    uint8_t i;

    /* Check input parameters */
    if (x >= ST7789_WIDTH ||
        y >= ST7789_HEIGHT) {
        /* Return error */
        return;
    }

    /* Check width and height */
    if ((x + w) >= ST7789_WIDTH) {
        w = ST7789_WIDTH - x;
    }
    if ((y + h) >= ST7789_HEIGHT) {
        h = ST7789_HEIGHT - y;
    }

    /* Draw lines */
    for (i = 0; i <= h; i++) {
        /* Draw lines */
        ST7789_DrawLine(x, y + i, x + w, y + i, color);
    }
    ST7789_UnSelect();
}

void ST7789_Test(void) {
    ST7789_Fill_Color(WHITE);
    HAL_Delay(1000);
    ST7789_WriteString(10, 20, "Speed Test", Font_11x18, RED, WHITE);
    HAL_Delay(1000);
    ST7789_Fill_Color(CYAN);
    HAL_Delay(500);
    ST7789_Fill_Color(RED);
    HAL_Delay(500);
    ST7789_Fill_Color(BLUE);
    HAL_Delay(500);
    ST7789_Fill_Color(GREEN);
    HAL_Delay(500);
    ST7789_Fill_Color(YELLOW);
    HAL_Delay(500);
    ST7789_Fill_Color(BROWN);
    HAL_Delay(500);
    ST7789_Fill_Color(DARKBLUE);
    HAL_Delay(500);
    ST7789_Fill_Color(MAGENTA);
    HAL_Delay(500);
    ST7789_Fill_Color(LIGHTGREEN);
    HAL_Delay(500);
    ST7789_Fill_Color(LGRAY);
    HAL_Delay(500);
    ST7789_Fill_Color(LBBLUE);
    HAL_Delay(500);
    ST7789_Fill_Color(WHITE);
    HAL_Delay(500);

    ST7789_WriteString(10, 10, "Font test.", Font_16x26, GBLUE, WHITE);
    ST7789_WriteString(10, 50, "Hello Steve!", Font_7x10, RED, WHITE);
    ST7789_WriteString(10, 75, "Hello Steve!", Font_11x18, YELLOW, WHITE);
    ST7789_WriteString(10, 100, "Hello Steve!", Font_16x26, MAGENTA, WHITE);
    HAL_Delay(1000);

    ST7789_Fill_Color(RED);
    ST7789_WriteString(10, 10, "Rect./Line.", Font_11x18, YELLOW, BLACK);
    ST7789_DrawRectangle(30, 30, 100, 100, WHITE);
    HAL_Delay(1000);

    ST7789_Fill_Color(RED);
    ST7789_WriteString(10, 10, "Filled Rect.", Font_11x18, YELLOW, BLACK);
    ST7789_DrawFilledRectangle(30, 30, 50, 50, WHITE);
    HAL_Delay(1000);

    ST7789_Fill_Color(RED);
    ST7789_WriteString(10, 10, "Circle.", Font_11x18, YELLOW, BLACK);
    ST7789_DrawCircle(60, 60, 25, WHITE);
    HAL_Delay(1000);

    ST7789_Fill_Color(RED);
    ST7789_WriteString(10, 10, "Filled Cir.", Font_11x18, YELLOW, BLACK);
    ST7789_DrawFilledCircle(60, 60, 25, WHITE);
    HAL_Delay(1000);

    ST7789_Fill_Color(RED);
    ST7789_WriteString(10, 10, "Triangle", Font_11x18, YELLOW, BLACK);
    ST7789_DrawTriangle(30, 30, 30, 70, 60, 40, WHITE);
    HAL_Delay(1000);

    ST7789_Fill_Color(RED);
    ST7789_WriteString(10, 10, "Filled Tri", Font_11x18, YELLOW, BLACK);
    ST7789_DrawFilledTriangle(30, 30, 30, 70, 60, 40, WHITE);
    HAL_Delay(1000);

    //	If FLASH cannot storage anymore datas, please delete codes below.
    ST7789_Fill_Color(WHITE);
    ST7789_DrawImage(0, 0, 128, 128, (uint16_t *) saber);
    HAL_Delay(3000);
}
